--- a/nginx.conf
+++ b/nginx.conf
@@ -3,18 +3,30 @@ events {
 }
 
 http {
+    include mime.types;
+    default_type application/octet-stream;
+
     server {
-        listen $PORT;
-        server_name localhost;
-    
+        listen 8080;
+        server_name _;
+
         location / {
             root /usr/share/nginx/html;
-            index index.html index.htm;
-            try_files $uri /index.html;
+            try_files $uri $uri/ /index.html;
+
+            # cache (firefox)
+            expires 30d;
+            add_header Cache-Control "public, max-age=2592000";
+
+            # security (firefox)
+            add_header X-Frame-Options "SAMEORIGIN";
+            add_header X-Content-Type-Options "nosniff";
+            add_header X-XSS-Protection "1; mode=block";
+            add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src 'self' data:; font-src 'self'; connect-src 'self';";
         }
-        error_page 500 502 503 504 /50x.html;
-        location = /error.html {
-            root /usr/share/nginx/html;
-        }
+
+        # gzip compression for better performance
+        gzip on;
+        gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
     }
 }
