--- a/nginx.conf
+++ b/nginx.conf
@@ -22,7 +22,7 @@ http {
             add_header X-Frame-Options "SAMEORIGIN";
             add_header X-Content-Type-Options "nosniff";
             add_header X-XSS-Protection "1; mode=block";
-            add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline' https://fonts.cdnfonts.com; img-src 'self' data:; font-src 'self' https://fonts.cdnfonts.com; connect-src 'self';";
+            add_header Content-Security-Policy "default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline' https://fonts.cdnfonts.com; img-src 'self' data:; font-src 'self' https://fonts.cdnfonts.com; connect-src 'self';";
         }
 
         # gzip compression for better performance
